--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,11 +30,20 @@
     <string name="video_file_size_warning">The selected video must be less than 10MB.</string>
     <string name="error_opening_file">There was a problem with the selected file.</string>
     <string name="error_file_size_too_large">The selected file is too large.</string>
+
     <string-array name="camera_choices">
         <item>Take Picture</item>
         <item>Take Video</item>
         <item>Choose Picture</item>
         <item>Choose Video</item>
     </string-array>
+
+    <string name="title_activity_recipients">Choose Recipients</string>
+    <string name="empty_recipients_list_message">Choose some friends first!</string>
+    <string name="action_send_label">Send</string>
+    <string name="error_selecting_file">There was an error with the file selected, please select a different file</string>
+    <string name="error_selecting_file_title">We\'re Sorry</string>
+    <string name="success_message">Message sent!</string>
+    <string name="error_sending_message">There was an error sending your message, please try again.</string>
 
 </resources>
