--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="error_selecting_file_title">We\'re Sorry</string>
     <string name="success_message">Message sent!</string>
     <string name="error_sending_message">There was an error sending your message, please try again.</string>
+    <string name="title_activity_view_image">Ribbit</string>
 
 </resources>
