--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
-    <string name="login_button_label">Login</string>
-    <string name="signup_label">Sign Up Here</string>
+    <string name="login_button_label">SIGN IN</string>
+    <string name="sign_up_label">Don\'t have and account? Sign up</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
-    <string name="sign_up_button_label">Sign Up</string>
+    <string name="sign_up_button_label">SIGN UP</string>
     <string name="email_hint">Email Address</string>
     <string name="sign_up_error_message">Please make sure you enter a username, password, and email address!</string>
     <string name="sign_up_error_title">Oops!</string>
@@ -46,5 +46,9 @@
     <string name="success_message">Message sent!</string>
     <string name="error_sending_message">There was an error sending your message, please try again.</string>
     <string name="title_activity_view_image">Ribbit</string>
+    <string name="content_desc_background">Ribbit Frog Background Image</string>
+    <string name="subtitle">A Treehouse Project</string>
+    <string name="cancel_button_label">CANCEL</string>
+    <string name="content_desc_button_divider">button divider</string>
 
 </resources>
