--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="cancel_button_label">CANCEL</string>
     <string name="content_desc_button_divider">button divider</string>
     <string name="content_desc_message_icon">Message icon</string>
+    <string name="content_desc_user_avatar">User Avatar</string>
 
 </resources>
