--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="content_desc_button_divider">button divider</string>
     <string name="content_desc_message_icon">Message icon</string>
     <string name="content_desc_user_avatar">User Avatar</string>
+    <string name="content_desc_user_checkmark">User Checkmark</string>
 
 </resources>
