--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="content_desc_message_icon">Message icon</string>
     <string name="content_desc_user_avatar">User Avatar</string>
     <string name="content_desc_user_checkmark">User Checkmark</string>
+    <string name="push_message">"You have a new Ribbit Message from %s!"</string>
 
 </resources>
